--- a/Zybach.Web/src/app/pages/well-registration-id-edit/well-registration-id-edit.component.html
+++ b/Zybach.Web/src/app/pages/well-registration-id-edit/well-registration-id-edit.component.html
@@ -34,7 +34,10 @@
                     <div class="row col-12 mt-4 text-center">
 
                             <div class="col-6 control-label text-right mb-2">
-                                <label><strong>Well Registration ID: </strong></label>
+                                <label><strong>
+                                    <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
+                                    </field-definition>
+                                </strong></label>
                             </div>
                             <div class="col-6 text-left mb-2">
                                 <input type="text" class="form-control" name="WellRegistrationID"
