bunch more field defs

--- a/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -50,7 +50,7 @@
                                 <div class="col-6 control-label text-right mb-2">
                                     <label><strong>
                                         <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
-                                        </field-definition>
+                                        </field-definition>:
                                     </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
