--- a/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
+++ b/Zybach.Web/src/app/pages/irrigation-unit-detail/irrigation-unit-detail.component.html
@@ -19,7 +19,7 @@
                             <div class="row">
                                 <div class="col-12 col-sm-6 label"><strong>
                                     <field-definition [fieldDefinitionType]="'IrrigationUnitID'">
-                                    </field-definition>
+                                    </field-definition>:
                                 </strong></div>
                                 <div class="col-12 col-sm-6">{{irrigationUnit.WellTPID}}</div>
                                 <div class="col-12 col-sm-6 label"><strong>Area (ac): </strong></div>
