--- a/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
+++ b/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
@@ -26,12 +26,15 @@
                                 <div class="row">
                                     <div class="col-6 label"><strong>
                                         <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
-                                        </field-definition>
+                                        </field-definition>:
                                     </strong> </div>
                                     <div class="col-6">{{ selectedWell?.WellRegistrationID }}</div>
                                     <div class="col-6 label"><strong>Legal Description: </strong></div>
                                     <div class="col-6">{{ selectedWell?.TownshipRangeSection }}</div>
-                                    <div class="col-6 label"><strong>Last Reading Date: </strong> </div>
+                                    <div class="col-6 label"><strong>
+                                        <field-definition [fieldDefinitionType]="'SensorLastReadingDate'">
+                                        </field-definition>:
+                                    </strong></div>
                                     <div class="col-6">{{ selectedWell?.LastReadingDate | date:'shortDate' }}</div>
                                 </div>
                             </div>
