--- a/Zybach.Web/src/app/pages/well-new/well-new.component.html
+++ b/Zybach.Web/src/app/pages/well-new/well-new.component.html
@@ -15,7 +15,7 @@
                     <div class="col-sm-5 control-label">
                         <label class="required">
                             <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
-                            </field-definition>
+                            </field-definition>:
                         </label>
                     </div>
                     <div class="col-sm-7">
