--- a/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -15,7 +15,10 @@
         <a class="btn btn-zybach btn-md mr-3 float-right disabled" routerLink="/"> Schedule Inspection </a>
     </div>
     <div class="row container">
-        <div class="col-12 col-sm-6 label"><strong>Well: </strong></div>
+        <div class="col-12 col-sm-6 label"><strong>
+            <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
+            </field-definition>: 
+        </strong></div>
         <div class="col-12 col-sm-6"><a *ngIf="chemigationPermit.Well" routerLink="/wells/{{chemigationPermit.Well.WellID}}">{{chemigationPermit.Well.WellRegistrationID}}</a>
             <em *ngIf="!chemigationPermit.Well" class="text-muted">N/A</em>
         </div>
