--- a/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
+++ b/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
@@ -40,7 +40,10 @@
                                 </div>
 
                                 <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>Well: </strong></label>
+                                    <label><strong>
+                                        <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
+                                        </field-definition>: 
+                                    </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
                                     <input type="text" class="form-control" name="WellRegistrationID" [(ngModel)]="model.WellRegistrationID" [ngbTypeahead]="searchApi" placeholder="Search by Reg #" />
