--- a/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
+++ b/Zybach.Web/src/app/pages/sensor-anomaly-edit/sensor-anomaly-edit.component.html
@@ -23,7 +23,10 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-sm-3 text-sm-right">
-                        <span class="font-weight-bold">Well Reg. #</span>
+                        <span class="font-weight-bold">
+                            <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
+                            </field-definition>: 
+                        </span>
                     </div>
                     <div class="col-sm-9">
                         {{sensorAnomaly.Sensor.WellRegistrationID}}
