--- a/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
+++ b/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
@@ -26,37 +26,37 @@
                             <div class="row">
                                 <div class="col-12 col-sm-6 label"><strong>
                                     <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
-                                    </field-definition>
+                                    </field-definition>:
                                 </strong> </div>
                                 <div class="col-12 col-sm-6 text-left"><a routerLink="/wells/{{sensor.WellID}}">{{sensor.WellRegistrationID}}</a></div>
                                 <div class="col-12 col-sm-6 label"><strong>
                                     <field-definition [fieldDefinitionType]="'SensorType'">
-                                    </field-definition>
+                                    </field-definition>:
                                 </strong> </div>
                                 <div class="col-12 col-sm-6 text-left">{{sensor.SensorTypeName}}</div>
                                 <div class="col-12 col-sm-6 label"><strong>
                                     <field-definition [fieldDefinitionType]="'SensorLastMessageAgeHours'">
-                                    </field-definition>
+                                    </field-definition>:
                                 </strong></div>
                                 <div class="col-12 col-sm-6 text-left">{{sensor.MessageAge}}</div>
                                 <div class="col-12 col-sm-6 label"><strong>
                                     <field-definition [fieldDefinitionType]="'SensorLastVoltageReading'">
-                                    </field-definition>
+                                    </field-definition>:
                                 </strong></div>
                                 <div class="col-12 col-sm-6 text-left">{{sensor.LastVoltageReading | number: "1.0-0"}}</div>
                                 <div class="col-12 col-sm-6 label"><strong>
                                     <field-definition [fieldDefinitionType]="'SensorFirstReadingDate'">
-                                    </field-definition>
+                                    </field-definition>:
                                 </strong> </div>
                                 <div class="col-12 col-sm-6 text-left">{{sensor?.FirstReadingDate | date: "MM/dd/yyyy" }}</div>
                                 <div class="col-12 col-sm-6 label"><strong>
                                     <field-definition [fieldDefinitionType]="'SensorLastReadingDate'">
-                                    </field-definition>
+                                    </field-definition>:
                                 </strong></div>
                                 <div class="col-12 col-sm-6 text-left">{{sensor?.LastReadingDate | date: "MM/dd/yyyy" }}</div>
                                 <div class="col-12 col-sm-6 label"><strong>
                                     <field-definition [fieldDefinitionType]="'SensorStatus'">
-                                    </field-definition>
+                                    </field-definition>:
                                 </strong></div>
                                 <div class="col-12 col-sm-6 text-left">
                                     <div class="btn-group btn-group-toggle float-left">
