Well Registration Number shortened to Well Reg # on Support Ticket Detail page. Optional creatorUser input added to supportTicketUpsert component, in order to display the correct create user rather than just the current user.

--- a/Zybach.Web/src/app/pages/support-ticket-edit/support-ticket-edit.component.html
+++ b/Zybach.Web/src/app/pages/support-ticket-edit/support-ticket-edit.component.html
@@ -30,7 +30,7 @@
 
     <form (ngSubmit)="onSubmit(editSupportTicketForm)" #editSupportTicketForm="ngForm" class="container">
 
-        <zybach-support-ticket-upsert #supportTicketUpsertForm [(model)]="model">
+        <zybach-support-ticket-upsert #supportTicketUpsertForm [(model)]="model" [creatorUser]="creatorUser">
         </zybach-support-ticket-upsert >
 
         <div class="col-12 text-right mt-3 mr-3">
