--- a/Zybach.Web/src/app/shared/components/support-ticket-upsert/support-ticket-upsert.component.html
+++ b/Zybach.Web/src/app/shared/components/support-ticket-upsert/support-ticket-upsert.component.html
@@ -59,7 +59,7 @@
                 <label><strong>Created By: </strong></label>
             </div>
             <div class="col-6 text-left mb-2">
-                {{currentUser?.FullName}}
+                {{creatorUser?.FullName}}
             </div>
 
             <div class="col-6 control-label text-right mb-2">
