--- a/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
+++ b/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
@@ -79,7 +79,7 @@
                         <div class="row col-12">
                             <div class="col-6 text-right">
                                 <p><strong>
-                                    <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
+                                    <field-definition [fieldDefinitionType]="'WellRegistrationNumber'" labelOverride="Well Reg #">
                                     </field-definition>: 
                                 </strong></p>
                             </div>
